Update MemoryConsumer.java